[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/dialogs/PasswordDialog.gd" type="Script" id=1]

[node name="PasswordDialog" type="PopupPanel"]
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_right = 808.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1134.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Offset" type="ReferenceRect" parent="VBoxContainer"]
margin_right = 1130.0
rect_min_size = Vector2( 800, 0 )
size_flags_vertical = 3

[node name="HBoxDesc" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1130.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer/HBoxDesc"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 0 )

[node name="Desc" type="Label" parent="VBoxContainer/HBoxDesc"]
margin_left = 44.0
margin_right = 1086.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "MP_PASSWORD_ENTER_DESC"
align = 1
valign = 1

[node name="ReferenceRect2" type="ReferenceRect" parent="VBoxContainer/HBoxDesc"]
margin_left = 1090.0
margin_right = 1130.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 0 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 1130.0
margin_bottom = 26.0

[node name="PasswordHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1130.0
margin_bottom = 54.0

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/PasswordHBox"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="Password" type="Label" parent="VBoxContainer/PasswordHBox"]
margin_left = 204.0
margin_top = 5.0
margin_right = 322.0
margin_bottom = 19.0
text = "LABEL_PASSWORD"

[node name="PasswordBox" type="LineEdit" parent="VBoxContainer/PasswordHBox"]
margin_left = 326.0
margin_right = 926.0
margin_bottom = 24.0
rect_min_size = Vector2( 600, 0 )
max_length = 20
secret = true

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/PasswordHBox"]
margin_left = 930.0
margin_right = 1130.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 1130.0
margin_bottom = 62.0

[node name="ControlBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 1130.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Offset" type="ReferenceRect" parent="VBoxContainer/ControlBox"]
margin_right = 319.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="OKButton" type="Button" parent="VBoxContainer/ControlBox"]
margin_left = 323.0
margin_right = 386.0
margin_bottom = 20.0
text = "BTN_OK"

[node name="Offset2" type="ReferenceRect" parent="VBoxContainer/ControlBox"]
margin_left = 390.0
margin_right = 709.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="VBoxContainer/ControlBox"]
margin_left = 713.0
margin_right = 806.0
margin_bottom = 20.0
text = "BTN_CANCEL"

[node name="Offset3" type="ReferenceRect" parent="VBoxContainer/ControlBox"]
margin_left = 810.0
margin_right = 1130.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="Offset4" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 1130.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/ControlBox/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlBox/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
